Enable Arc Pacakge sync datatype at proper time.

We enable Arc package sync datatype when user enables Arc, and call
StartModels when Arc app instance is ready and Arc packages get
refreshed. But There is a big time gap since we need perform provision
for Arc during opt-in. And this may lead to the high config time-out
rate for Arc packages.

Enable the datatype when provision is successful and reduce the gap
between enabling the sync data type and calling startModels.

Bug: 771838
Test: Manual test and Arc pacakge related integration test.
Change-Id: I4c70c9d7e3c690fc953dac981398424d166ce51f
Reviewed-on: https://chromium-review.googlesource.com/702014
Reviewed-by: Pavel Yatsuk <pavely@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Long Cheng <lgcheng@google.com>
Cr-Commit-Position: refs/heads/master@{#506817}
Former-commit-id: d36c54bb660c9bfa374a05a222959da11dd1fae4